add trakt links to timeline titles

--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -37,7 +37,7 @@
                             <h4 class="ui image header">
                                 <!--<img src="/images/avatar2/small/lena.png" class="ui mini rounded image">-->
                                 <div class="content">
-                                    {{ title }}
+                                    <a href={{trakt}} target="_blank">{{ title }}</a>
                                     <div class="sub header">{{ studio }}
                                     </div>
                                 </div>
