--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -34,7 +34,6 @@ a {
 
 .masthead.center.aligned.segment {
     text-shadow: 1px 1px 1px black;
-    padding-bottom: 2em;
     margin-bottom: 2em;
 }
 
@@ -77,7 +76,7 @@ a.ui.button.sort-ascending {
 }
 
 .masthead h1.ui.header {
-    margin-top: 1em;
+    margin-top: 0;
     margin-bottom: 1em;
     font-size: 2em;
     font-weight: normal;
