adjust content of footer

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -36,8 +36,8 @@
 
 	<div class="ui two column very relaxed stackable grid container">
 		<div class="eight wide column">
-	    	<h4 class="ui horizontal header divider"><span>Donate a Beer</span></h4>
-			<p>If you copy this calendar to your own Google Calendar, consider donating a buck. It helps pay for the domain name, and keeping the data online. Also beer. The calendar will be kept up to date for so long as they keep making these shows. ;)
+	    	<h4 class="ui horizontal header divider"><span>Support</span></h4>
+			<p>If you find this site helpful, if you make use of the calendar sync, if you just have a spare dollar, consider sending it in this direction. The site could always use more dollars.
 			</p>
 			<div class="ui centered item">
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -50,8 +50,8 @@
 		</div>
 	    <div class="eight wide column">
 	    	<h4 class="ui horizontal header divider"><span>About the Project</span></h4>
-		    <p>Click the +Google Calendar button above to add the entire Marvel lineup to your own personal Google calendar.</p>
-			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options in the footer below.</p>
+		    <p>I started this site as a way for some friends to keep track of the shows we love. But maybe you'll find it useful too!</p>
+			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options in the footer below, or on the timeline page, where the REAL magic happens.</p>
 	  	</div>
 	</div>
 </template>
