fix some spacing issues on movieCrd, add theLatest view

--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -1,5 +1,5 @@
 <template name="moviecard">
-	<div class="{{#if oneCurrentMovie }}sixteen{{ else }} eight {{/if}}wide column">
+	<div class="column">
 		<div class="ui fluid card">
 			<div class="blurring dimmable image">
 				<div class="ui dimmer">
