--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -14,6 +14,7 @@
         <!--<img class="testing" src="marvel.jpg">-->
         <div class="ui container">
             <div class="ui large secondary inverted pointing menu">
+                <!-- <a id="nav-latest" class="item">the latest</a> -->
                 <a id="nav-cal" class="item">calendar</a>
                 <a id="nav-timeline" class="item">timeline</a>
 <!--                 
@@ -31,6 +32,7 @@
 
 
         <div class="ui left vertical menu sidebar mobile only">
+            <a class="item">the latest</a>
             <a class="active item">calendar</a>
             <a class="item">timeline</a>
         </div>
