--- a/client/views/theLatest/theLatest.html
+++ b/client/views/theLatest/theLatest.html
@@ -1,4 +1,4 @@
-<template name="forumPage">
+<template name="theLatest">
 	<div class="container">
 		{{#if currentUser}}
 			<div style="margin-bottom: 50px;">
