--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -3,7 +3,7 @@
 	<div class="ui very relaxed stackable grid container">
 		<div class="{{#if oneCurrentMovie}}eight{{ else }} ten {{/if}} wide column">
             <h3 class="ui horizontal header divider"><span>Now Playing</span></h3>
-	    	<div class="ui centered stackable relaxed grid container special cards">
+	    	<div class="ui centered stackable relaxed equal width grid container special cards">
 		        {{#each currentCalendarMovies}}
 		            {{> moviecard}}
 		        {{/each}}
@@ -22,7 +22,7 @@
 	<div class="ui container">
         <h3 class="ui horizontal header divider"><span>Next Up</span></h3>
     </div>
-	<div class="ui centered three column stackable relaxed grid container special cards">
+	<div class="ui centered three column stackable relaxed equal width grid container special cards">
 	    {{#each nextUpCalendarMovies}}
 	        {{> moviecard}}
 	    {{/each}}
