--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -5,7 +5,9 @@
             <h3 class="ui horizontal header divider"><span>Now Playing</span></h3>
 	    	<div class="ui centered stackable relaxed equal width grid container special cards">
 		        {{#each currentCalendarMovies}}
-		            {{> moviecard}}
+					<div class="column">
+		        	    <img src="{{poster.url}}">
+		            </div>
 		        {{/each}}
 			</div>
 		</div>
