--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -1,25 +1,21 @@
 <template name="moviecard">
 	<div class="column">
-		<div class="ui fluid card">
-			<div class="blurring dimmable image">
-				<div class="ui dimmer">
-					<div class="content">
-						<div class="center">
-						{{#if watchnow}}
-							<div class="ui inverted button"><a href={{watchnow}} target="_blank"><i class="video play outline icon"></i> Watch Now</a></div>
-						{{ else }}
-							{{ #if trailer }}
-							<div class="ui inverted button"><a href={{trailer}} target="_blank"><i class="video play outline icon"></i> Watch Trailer</a></div>
-							{{ else }}
-							<div>Media Not Available</div>
-							{{/if}}
-						{{/if}}
-						</div>
-					</div>
-				</div>
-	                    <!--BANNER SHOULD BE 600 x 400 px-->
-				<img class="ui fluid dimmable image" src={{banner.url}}>
-			</div>
+		<style>
+			.movie-poster:before {
+				content: "";
+				position: absolute;
+				top: 0; 
+				left: 0;
+				width: 100%; 
+				height: 100%;  
+				opacity: .2; 
+				z-index: -1;
+				background-image: url({{banner.url}});
+			    background-position: center; 
+			    background-size: cover;
+			}
+		</style>
+		<div class="ui fluid card movie-poster">
 			<div class="left aligned content">
 				<img class="right floated avatar large ui image" src={{logo.url}}>
 				<div class="header">
