--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -1,21 +1,19 @@
 <template name="moviecard">
 	<div class="column">
-		<style>
-			.movie-poster:before {
-				content: "";
-				position: absolute;
-				top: 0; 
-				left: 0;
-				width: 100%; 
-				height: 100%;  
-				opacity: .2; 
-				z-index: -1;
-				background-image: url({{banner.url}});
-			    background-position: center; 
-			    background-size: cover;
-			}
-		</style>
-		<div class="ui fluid card movie-poster">
+		<style>#{{_id}}:before {
+			content: "";
+			position: absolute;
+			top: 0; 
+			left: 0;
+			width: 100%; 
+			height: 100%;  
+			opacity: .2; 
+			z-index: -1;
+			background-image: url({{banner.url}});
+		    background-position: center; 
+		    background-size: cover;
+		}</style>
+		<div class="ui fluid card" id="{{_id}}" style="position: relative; z-index: 1;">
 			<div class="left aligned content">
 				<img class="right floated avatar large ui image" src={{logo.url}}>
 				<div class="header">
