add padding and background images to coming soon

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -6,7 +6,7 @@
 	    	<div class="ui centered stackable relaxed equal width grid container special cards">
 		        {{#each currentCalendarMovies}}
 					<div class="column">
-		        	    <img src="{{poster.url}}">
+		        	    <img class="ui centered image" src="{{poster.url}}">
 		            </div>
 		        {{/each}}
 			</div>
@@ -38,7 +38,7 @@
 
 	<div class="ui two column very relaxed stackable grid container">
 		<div class="eight wide column">
-	    	<h4 class="ui horizontal header divider"><span>Support</span></h4>
+	    	<!-- <h4 class="ui horizontal header divider"><span>Support</span></h4> -->
 			<p>If you find this site helpful, if you make use of the calendar sync, if you just have a spare dollar, consider sending it in this direction. The site could always use more dollars.
 			</p>
 			<div class="ui centered item">
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	    <div class="eight wide column">
-	    	<h4 class="ui horizontal header divider"><span>About the Project</span></h4>
+	    	<!-- <h4 class="ui horizontal header divider"><span>About the Project</span></h4> -->
 		    <p>I started this site as a way for some friends to keep track of the shows we love. But maybe you'll find it useful too!</p>
 			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options in the footer below, or on the timeline page, where the REAL magic happens.</p>
 	  	</div>
