--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -9,7 +9,7 @@
 			height: 100%;  
 			opacity: .2; 
 			z-index: -1;
-			background-image: url({{banner.url}});
+			background-image: url({{poster.url}});
 		    background-position: center; 
 		    background-size: cover;
 		}</style>
@@ -51,7 +51,21 @@
 </template>
 
 <template name="nextUpMovieCard">
-	<div class="item">
+	<style>#{{_id}}:before {
+		content: "";
+		position: absolute;
+		top: 0; 
+		left: 0;
+		width: 100%; 
+		height: 100%;  
+		opacity: .2; 
+		z-index: -1;
+		background-image: url({{banner.url}});
+	    background-position: center; 
+	    background-size: cover;
+	}</style>
+
+	<div class="item" id="{{_id}}" style="position: relative; z-index: 1; margin-top: 15px; padding: 10px;">
 	    <div class="right floated content">
       		<div class="ui tiny header">{{release}}</div>
     	</div>
