--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -3,17 +3,17 @@
 	<div class="ui very relaxed stackable grid container">
 		<div class="{{#if oneCurrentMovie}}eight{{ else }} ten {{/if}} wide column">
             <h3 class="ui horizontal header divider"><span>Now Playing</span></h3>
-	    	<div class="ui centered stackable relaxed equal width grid container special cards">
+	    	<div class="ui centered stackable relaxed equal width grid">
 		        {{#each currentCalendarMovies}}
-					<div class="ui centered column">
+					<div class="">
 						<img class="ui centered image" src="{{poster.url}}">
 						{{#if watchnow }}
-							<div class="ui dimmer">
+							<div class="ui centered dimmer">
 								<div class="content">
 									<div class="center">
 										<h2 class="ui inverted icon header">
-											<i class="play icon"></i>
-											Watch Now
+											<i class="play icon"></i><br/>
+											Watch Now<br/>(Legally)
 										</h2>
 									</div>
 								</div>
