add a proper url to watch now

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -10,12 +10,14 @@
 						{{#if watchnow }}
 							<div class="ui centered dimmer">
 								<div class="content">
-									<div class="center">
-										<h2 class="ui inverted icon header">
-											<i class="play icon"></i><br/>
-											Watch Now<br/>(Legally)
-										</h2>
-									</div>
+									<a href="{{watchnow}}">
+										<div class="center">
+											<h2 class="ui inverted icon header">
+												<i class="play icon"></i><br/>
+												Watch Now<br/>(Legally)
+											</h2>
+										</div>
+									</a>
 								</div>
 							</div>
 						{{/if}}
