add some watch now icons to the listing page

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -13,7 +13,7 @@
 									<a href="{{watchnow}}">
 										<div class="center">
 											<h2 class="ui inverted icon header">
-												<i class="play icon"></i><br/>
+												<i class="video play icon"></i><br/>
 												Watch Now<br/>(Legally)
 											</h2>
 										</div>
