--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -37,17 +37,17 @@
                             <h4 class="ui image header">
                                 <!--<img src="/images/avatar2/small/lena.png" class="ui mini rounded image">-->
                                 <div class="content">
-                                    <a href={{trakt}} target="_blank">{{ title }}</a>
+                                    <a class="ui medium header" href={{trakt}} target="_blank">{{ title }}</a>
                                     <div class="sub header">{{ studio }}
                                     </div>
                                     {{#if googleplay}}
-                                        <a href="{{googleplay}}"><img class="ui tiny image" src="https://www.androidpolice.com/wp-content/uploads/2016/04/nexus2cee_product_logo_play_movies_color_192.png"></a>
+                                        <a href="{{googleplay}}"><img class="ui mini image" src="https://www.androidpolice.com/wp-content/uploads/2016/04/nexus2cee_product_logo_play_movies_color_192.png"></a>
                                     {{/if}}
                                     {{#if netflix}}
-                                        <a href="{{googleplay}}"><img class="ui tiny image" src="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Netflix-icon.png"></a>
+                                        <a href="{{googleplay}}"><img class="ui mini image" src="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Netflix-icon.png"></a>
                                     {{/if}}
                                     {{#if watchnow}}
-                                        <a href="{{watchnow}}"><img class="ui tiny image" src="{{networkicon}}"></a>
+                                        <a href="{{watchnow}}"><img class="ui mini image" src="{{networkicon}}"></a>
                                     {{/if}}
 
                                 </div>
