point the netflix logo to actual netflix listings

--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -44,7 +44,7 @@
                                         <a href="{{googleplay}}"><img class="ui mini image" src="https://www.androidpolice.com/wp-content/uploads/2016/04/nexus2cee_product_logo_play_movies_color_192.png"></a>
                                     {{/if}}
                                     {{#if netflix}}
-                                        <a href="{{googleplay}}"><img class="ui mini image" src="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Netflix-icon.png"></a>
+                                        <a href="{{netflix}}"><img class="ui mini image" src="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Netflix-icon.png"></a>
                                     {{/if}}
                                     {{#if watchnow}}
                                         <a href="{{watchnow}}"><img class="ui mini image" src="{{networkicon}}"></a>
