headers were too big. oops

--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -37,7 +37,7 @@
                             <h4 class="ui image header">
                                 <!--<img src="/images/avatar2/small/lena.png" class="ui mini rounded image">-->
                                 <div class="content">
-                                    <a class="ui medium header" href={{trakt}} target="_blank">{{ title }}</a>
+                                    <a class="ui small header" href={{trakt}} target="_blank">{{ title }}</a>
                                     <div class="sub header">{{ studio }}
                                     </div>
                                     {{#if googleplay}}
