add a little more space on listing under studio names

--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -38,8 +38,8 @@
                                 <!--<img src="/images/avatar2/small/lena.png" class="ui mini rounded image">-->
                                 <div class="content">
                                     <a class="ui small header" href={{trakt}} target="_blank">{{ title }}</a>
-                                    <div class="sub header">{{ studio }}
-                                    </div>
+                                    <div class="sub header">{{studio}}
+                                    </div><br/>
                                     {{#if googleplay}}
                                         <a href="{{googleplay}}"><img class="ui mini image" src="https://www.androidpolice.com/wp-content/uploads/2016/04/nexus2cee_product_logo_play_movies_color_192.png"></a>
                                     {{/if}}
